# Transformer-replication

./: .pre-commit-config.yaml  README.md  pyproject.toml
experiments/english_to_german/: prepare_data.py  run_experiment.py
src/activations/: relu.py
src/blocks/: decoder.py  encoder.py  feed_forward_block.py  feed_forward_network.py  transformer.py
src/layers/: README.md  attention.py  decoder.py  dropout.py  embedding.py  encoder.py  feed_forward.py  layer_norm.py  multi_head_attention.py  positional_encoding.py  scaled_dot_product_attention.py  transformer_block.py
src/logging/: log_config.py  log_utils.py
src/tokenisers/: README.md  byte_pair_encoding.py  example_bpe.py  normalisers.py
